chore: adding hold job in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@ jobs:
 workflows:
   integration_test:
     jobs:
-      - build-core:
+      - hold:
           type: approval
+      - build-core:
           context:
             - personal-aws-context
