--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
     executor: terraform/default
     steps:
       - checkout
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 1.3.6
       - run: terraform workspace new test-${CIRCLE_SHA1}
       - terraform/init:
           path: .
@@ -29,3 +33,5 @@ workflows:
       - build-core:
           context:
             - personal-aws-context
+          require:
+            hold
