--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - terraform/install:
           arch: amd64
           os: linux
-          terraform_version: 1.3.6
+          terraform_version: latest
       - run: terraform workspace new test-${CIRCLE_SHA1}
       - terraform/init:
           path: .
