--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,95 @@
 version: 2.1
-
-orbs:
-  terraform: circleci/terraform@3.2.0
+executors:
+  terraform:
+    docker:
+      - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.3.6
+    working_directory: /tmp/project
 # Define the jobs we want to run for this project
 jobs:
-  build-core:
-    executor: terraform/default
+  plan-apply:
+    executor: terraform
     steps:
       - checkout
-      - terraform/install:
-          arch: amd64
-          os: linux
-          terraform_version: latest
-      - run: terraform workspace new test-${CIRCLE_SHA1}
-      - terraform/init:
-          path: .
-      - terraform/plan:
-          path: ./infra/core
-      - terraform/apply:
-          path: ./infra/core
-      - terraform/destroy:
-          path: ./infra/core
-      - run: terraform workspace delete test-${CIRCLE_SHA1}
+      - run:
+          name: terraform init & plan
+          command: |
+            terraform init -input=false
+            terraform workspace new test-${CIRCLE_SHA1}
+            terraform plan -out tfapply
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+  apply:
+    executor: terraform
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform
+          command: |
+            terraform apply -auto-approve tfapply
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+  plan-destroy:
+    executor: terraform
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform create destroy plan
+          command: |
+            terraform plan -destroy -out tfdestroy
+      - persist_to_workspace:
+          root: .
+          paths:
+            - .
+
+  destroy:
+    executor: terraform
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: terraform destroy
+          command: |
+            terraform apply -auto-approve tfdestroy
+            terraform workspace delete test-${CIRCLE_SHA1}
 
 
 # Orchestrate our job run sequence
 workflows:
   integration_test:
     jobs:
-      - hold:
-          type: approval
-      - build-core:
+      - plan-apply:
           context:
             - personal-aws-context
+      - hold-apply:
+          type: approval
           requires:
-            - hold
+            - plan-apply
+          context:
+            - personal-aws-context
+      - apply:
+          requires:
+            - hold-apply
+          context:
+            - personal-aws-context
+      - plan-destroy:
+          requires:
+            - apply
+          context:
+            - personal-aws-context
+      - hold-destroy:
+          type: approval
+          requires:
+            - plan-destroy
+          context:
+            - personal-aws-context
+      - destroy:
+          requires:
+            - hold-destroy
+          context:
+            - personal-aws-context
