fix: missing parameters

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,9 @@ jobs:
           paths:
             - .
   plan-destroy:
+    parameters:
+      project:
+        type: string
     executor: terraform
     steps:
       - attach_workspace:
