--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,6 @@ executors:
     docker:
       - image: docker.mirror.hashicorp.services/hashicorp/terraform:1.3.6
     working_directory: /tmp/project
-# Define the jobs we want to run for this project
-
-parameters:
-  run_integration_tests:
-    type: boolean
-    default: false
 
 jobs:
   plan-apply:
@@ -56,10 +50,13 @@ jobs:
 # Orchestrate our job run sequence
 workflows:
   integration_test:
-    when: << pipeline.parameters.run_integration_tests >>
     jobs:
+      - hold-apply:
+          type: approval
       - plan-apply:
           project: core
+          requires:
+            - hold-destroy
           context:
             - personal-aws-context
       - hold-destroy:
