--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ jobs:
             cd ./infra/<< parameters.project >>
             terraform plan -destroy -out tfdestroy
             terraform apply -auto-approve tfdestroy
-            terraform workspace switch default
+            terraform workspace select default
             terraform workspace delete test-${CIRCLE_SHA1}
       - persist_to_workspace:
           root: .
