feat: adding front app in the pipeline (1)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ workflows:
       - hold-destroy:
           type: approval
           requires:
-            - plan-apply-back
+            - plan-apply-front
           context:
             - personal-aws-context
       - plan-destroy:
